--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,17 +1,25 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Tab 1
-    </ion-title>
+<ion-header>
+  <ion-toolbar color="primary">
+  <ion-title>Login</ion-title>
   </ion-toolbar>
-</ion-header>
-
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 1</ion-title>
-    </ion-toolbar>
   </ion-header>
-
-  <app-explore-container name="Tab 1 page"></app-explore-container>
-</ion-content>
+  
+  <ion-content padding='true'>
+  <img src="" class="smallLogo"/>
+  <h2>Iniciar Sesion</h2>
+  <form (submit)="signIn()">
+  <ion-list>
+  <ion-item>
+  <ion-label position="stacked">Email</ion-label>
+  <ion-input autocomplete="off" [(ngModel)]="user.usuario" name="usuario" type="text"></ion-input>
+  </ion-item>
+  
+  <ion-item>
+  <ion-label position="stacked">Password</ion-label>
+  <ion-input autocomplete="off" [(ngModel)]="user.pass" name="pass" type="password"></ion-input>
+  </ion-item>
+  
+  </ion-list>
+  <ion-button expand="block" type="submit" share="round" color="success">Login</ion-button>
+  </form>
+  </ion-content>
